<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.user.SigninFragment">

    <ImageView
        android:id="@+id/logo_signin"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/text_logo"
        android:textColor="@color/accent"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_signin"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/signin_username"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/input_bg"
        android:hint="@string/user"
        android:fontFamily="@font/ibm_plex_sans"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/accent"
        android:textColorHint="@color/gray_faded"
        android:textSize="@dimen/input_tsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/signin_pass"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:background="@drawable/input_bg"
        android:hint="@string/pass"
        android:fontFamily="@font/ibm_plex_sans"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/accent"
        android:textColorHint="@color/gray_faded"
        android:textSize="@dimen/input_tsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_username"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        android:textSize="@dimen/input_tsize"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toTopOf="@+id/to_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to_signup_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans"
        android:padding="18dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="@dimen/input_tsize"
        android:clickable="true"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ProgressBar
        android:id="@+id/progress_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/accent"
        android:secondaryProgressTint="@color/accent_faded"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>