<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.user.SignupFragment">

    <ImageView
        android:id="@+id/logo_signin"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/text_logo"
        android:textColor="@color/accent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_signin"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/signup_head"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/signup"
        android:textColor="@color/accent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_text"
        app:layout_constraintVertical_bias="0" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_head">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray_faded"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray_faded"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_username"
                app:layout_constraintVertical_bias="0" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray_faded"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_email"
                app:layout_constraintVertical_bias="0" />

            <EditText
                android:id="@+id/signup_pass"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:hint="@string/pass"
                android:inputType="textVisiblePassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray_faded"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_name"
                app:layout_constraintVertical_bias="0" />

            <EditText
                android:id="@+id/signup_repeat_pass"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:hint="@string/repeat_pass"
                android:inputType="textVisiblePassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray_faded"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_pass"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/signup_birthday"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/birthday"
                android:textColor="@color/gray_faded"
                android:textSize="@dimen/input_tsize"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_repeat_pass"
                app:layout_constraintVertical_bias="0"
                app:drawableEndCompat="@drawable/date_icon" />

            <GridLayout
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_birthday">

                <Button
                    android:id="@+id/male_button"
                    android:layout_width="175dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_male"
                    android:fontFamily="@font/ibm_plex_sans"
                    android:text="@string/male"
                    android:textSize="@dimen/input_tsize"
                    android:textColor="@color/gray_faded"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/female_button"
                    android:layout_width="175dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_female"
                    android:fontFamily="@font/ibm_plex_sans"
                    android:text="@string/female"
                    android:textSize="@dimen/input_tsize"
                    android:textColor="@color/gray_faded"
                    android:textAllCaps="false"/>
            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        android:textSize="@dimen/input_tsize"
        app:layout_constraintBottom_toTopOf="@+id/alr_acc_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/alr_acc_button"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/alr_acc"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="@dimen/input_tsize"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <ProgressBar
        android:id="@+id/progress_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>