<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.user.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/prof_pic"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="@dimen/prof_pic"
                android:layout_height="@dimen/prof_pic"
                android:src="@drawable/ic_profile"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:text="@string/name"
            android:textColor="@color/bright_white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/card_profile"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/title_email"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:text="@string/e_mail"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/ibm_plex_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/input_email"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/title_avlink"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:text="@string/avatar_link"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/ibm_plex_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"/>

            <EditText
                android:id="@+id/input_avlink"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:inputType="textPersonName"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_avlink"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/title_name"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/ibm_plex_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_avlink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"/>

            <EditText
                android:id="@+id/input_name"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/ibm_plex_sans"
                android:inputType="textVisiblePassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textSize="@dimen/input_tsize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_name"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/title_birthday"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:text="@string/birthday"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/ibm_plex_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"/>

            <TextView
                android:id="@+id/input_birthday"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_bg"
                android:clickable="true"
                android:fontFamily="@font/ibm_plex_sans"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/accent"
                android:textSize="@dimen/input_tsize"
                app:drawableEndCompat="@drawable/date_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_birthday"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/title_gender"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:text="@string/gender"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/ibm_plex_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_birthday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"/>

            <GridLayout
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_gender"
                app:layout_constraintVertical_bias="0">

                <Button
                    android:id="@+id/male_button"
                    android:layout_width="175dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_male"
                    android:fontFamily="@font/ibm_plex_sans"
                    android:text="@string/male"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_faded"
                    android:textSize="@dimen/input_tsize" />

                <Button
                    android:id="@+id/female_button"
                    android:layout_width="175dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_female"
                    android:fontFamily="@font/ibm_plex_sans"
                    android:text="@string/female"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_faded"
                    android:textSize="@dimen/input_tsize" />
            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg_pressed"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/bright_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/logout_button"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:fontFamily="@font/ibm_plex_sans"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <ProgressBar
        android:id="@+id/progress_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/accent"
        android:secondaryProgressTint="@color/accent_faded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>